<resources>
    <string name="app_name">JLU life</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drcom_login">校园网登陆</string>
    <string name="hint_uname">用户名</string>
    <string name="hint_pwd">密码</string>
    <string name="label_remember_pwd">记住密码</string>
    <string name="label_auto_login">自动登陆</string>
    <string name="label_outside">我在校外</string>
    <string name="btn_login">登陆</string>
    <string name="btn_logout">注销</string>
    <string name="btn_refesh">刷新</string>
    <string name="btn_sync">同步</string>
    <string name="btn_query">查询</string>
    <string name="label_login_success">登陆成功</string>
    <string name="label_load_fail">加载失败</string>
    <string name="label_load_fail_information">请检查您的网络配置</string>
    <string name="label_login_success_information">您可以尽情的使用网络了</string>
    <string name="label_login_time">登陆时长</string>
    <string name="label_flow_used">已使用流量</string>
    <string name="retry">重试</string>
    <string name="cancel">取消</string>
    <string name="err_wrong_pwd">密码错啦,你一定是手残党,再试一次吧</string>
    <string name="err_wrong_uname">我走过千山万水,还是没有找到你的用户名,快点好好检查一下</string>
    <string name="err_use_nat">胆大包天,竟然敢用路由器上网,小心向警察叔叔告发你,我是不会让你得逞的</string>
    <string name="err_is_login">你已经能上网了,还登陆,是不是看上蜀黍了</string>
    <string name="err_network_unavailable">网络太傲娇,费了好大劲也没有挤进去</string>
    <string name="err_default">我也不造什么错误,但是还是登陆不上,你好好检查一下网络配置吧</string>
    <string name="last_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="label_score">成绩:</string>
    <string name="label_gpoint">绩点:</string>
    <string name="label_scorepoint">学分:</string>
    <string name="label_isreselect">重修:</string>
    <string name="copyright">吉林大学IBM俱乐部移动开发组</string>
    <string name="share_wx">分享到朋友圈</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"> blank fragment</string>
    <string name="title_activity_login_success">登陆成功</string>
    <string name="title_activity_uims_oauth">教务查询</string>
    <string name="title_activity_jwquery">教务通知</string>
    <string name="title_activity_news">校内通知</string>
    <string name="action_update">更新课表</string>
    <string name="label_update_lesson_select">请选择需要同步的学期</string>
    <string name="action_library_myhome">我的账号</string>
    <string name="app_describe">　　JLU life是一款面向吉林大学学生的App,提供课表查询、展示，成绩查询，校内通知、教务通知查看，图书馆书目查询、借阅信息管理等集多功能为一身的app。由于时间有限，很多功能并没有得到完善，系统也存在诸多Bug，希望大家能够帮助我们能够将它不断完善改进。作为一个即将毕业滚蛋的大四党，也希望能够尽自己的所能更多的帮助到同学们，为同学们的学习、生活提供便利。</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="share_text">JLU life,更方便的登陆校园网,查课表,差成绩,校内通知,不用连校园网也能看,有了它,再也不用课程格子,Drcom了,妈妈再也不用担心我在吉大的学习了</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sem_select">SemSelectActivity</string>
    <string name="title_activity_uimsauth">UIMSAuthActivity</string>
    <string name="title_activity_about">关于JLU Life</string>
    <string name="loading">加载中...</string>
    <string name="hint_course_name">请输入课程名称</string>
    <string name="hint_teacher_name">请输入授课教师名称</string>
    <string name="hint_course_place">请输入上课地点</string>
    <string name="tv_help_library_login">图书馆账号为一卡通号码，默认登陆密码为1234</string>
    <string name="tv_help_uims_login">用户名为教学号，新生默认密码为身份证后六位</string>


    <string-array name="weeks">
        <item>第1周</item>
        <item>第2周</item>
        <item>第3周</item>
        <item>第4周</item>
        <item>第5周</item>
        <item>第6周</item>
        <item>第7周</item>
        <item>第8周</item>
        <item>第9周</item>
        <item>第10周</item>
        <item>第11周</item>
        <item>第12周</item>
        <item>第13周</item>
        <item>第14周</item>
        <item>第15周</item>
        <item>第16周</item>
        <item>第17周</item>
        <item>第18周</item>
        <item>第19周</item>
        <item>第20周</item>
    </string-array>
    <string-array name="days">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>
    <string-array name="course">
        <item>第1节</item>
        <item>第2节</item>
        <item>第3节</item>
        <item>第4节</item>
        <item>第5节</item>
        <item>第6节</item>
        <item>第7节</item>
        <item>第8节</item>
        <item>第9节</item>
        <item>第10节</item>
        <item>第11节</item>
    </string-array>
</resources>
