<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.brady.jlulife.Fragments.DrcomLoginFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/drcom_loginpage_margin_top"
        android:layout_marginLeft="@dimen/drcom_loginpage_margin_left"
        android:layout_marginRight="@dimen/drcom_loginpage_margin_left"
        >
        <EditText
            android:id="@+id/et_drcom_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_uname"
            android:textSize="@dimen/hint_txt_size"
            android:layout_margin="@dimen/edittext_margin"/>
        <EditText
            android:id="@+id/et_drcom_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/hint_txt_size"
            android:hint="@string/hint_pwd"
            android:layout_margin="@dimen/edittext_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp">
            <CheckBox
                android:id="@+id/checkbox_remember_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_remember_pwd"
                android:textSize="@dimen/small_txt_size"
                android:layout_margin="@dimen/checkbox_margin"/>
            <CheckBox
                android:id="@+id/checkbox_auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_auto_login"
                android:textSize="@dimen/small_txt_size"
                android:layout_margin="@dimen/checkbox_margin"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_drcom_login"
            android:layout_marginTop="@dimen/btn_margintop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:background="@drawable/selector"
            android:textSize="@dimen/btn_txtsize"
            android:textColor="@color/btn_txtcolor"
            />
        <Button
            android:visibility="gone"
            android:id="@+id/btn_drcom_logout"
            android:layout_marginTop="@dimen/btn_margintop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout"
            android:background="@drawable/selector"
            android:textSize="@dimen/btn_txtsize"
            android:textColor="@color/btn_txtcolor"
            />
    </LinearLayout>


</LinearLayout>
