<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.brady.jlulife.Fragments.AboutFragment">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="60dp"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/large_font_size" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_txt_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="@dimen/small_txt_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/app_describe"
            android:textSize="@dimen/small_txt_size" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_share_wx"
        android:textColor="@color/white"
        android:text="@string/share_wx"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"/>
</LinearLayout>
