<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brady.jlulife.Fragments.LoginSuccessFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/drcom_loginpage_margin_top">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic__success"/>
    <TextView
        android:paddingTop="@dimen/drcom_loginpage_margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_login_success"
        android:textSize = "@dimen/large_font_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_login_success_information"
        android:textSize="@dimen/small_txt_size"
        android:layout_margin="@dimen/btn_txtsize"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/drcom_loginpage_margin_top"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_login_time"
                android:textSize="@dimen/small_txt_size"/>
            <TextView
                android:id="@+id/tv_login_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_txt_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_flow_used"
                android:textSize="@dimen/small_txt_size"/>
            <TextView
                android:id="@+id/tv_used_flow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_txt_size"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@id/btn_drcom_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:text="@string/btn_logout"
        android:textSize="@dimen/btn_txtsize"
        android:textColor="@color/btn_txtcolor"
        android:layout_margin="@dimen/btn_margintop"
        />
</LinearLayout>
