<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/score_item_padding_top_bottom"
    android:paddingBottom="@dimen/score_item_padding_top_bottom"
    android:paddingLeft="@dimen/score_item_padding_left_right"
    android:paddingRight="@dimen/score_item_padding_left_right">
<TextView
    android:textColor="@color/black"
    android:id="@+id/tv_cour_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/score_name_size" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_score"
                android:textSize="@dimen/score_spec_size"/>
            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/score_spec_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gpoint"
                android:textSize="@dimen/score_spec_size"/>
            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_gpoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/score_spec_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_scorepoint"
                android:textSize="@dimen/score_spec_size"/>
            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_scorepoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/score_spec_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_isreselect"
                android:textSize="@dimen/score_spec_size"/>
            <TextView
                android:textColor="@color/black"
                android:id="@+id/is_reselect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/score_spec_size"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>