<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brady.jlulife.Fragments.EditCourseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_course_name" />

            <EditText
                android:id="@+id/et_course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_course_name"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_teacher_name" />

            <EditText
                android:id="@+id/et_teacher_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_teacher_name"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_course_place" />

            <EditText
                android:id="@+id/et_course_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_course_place"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_course_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spinner_startweek_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/weeks"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:text="至"
                    android:textColor="#242425"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner_endweek_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/weeks"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_course_time"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spinner_week_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/days"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="40dp">

            <Spinner
                android:id="@+id/spinner_startclass_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:entries="@array/course"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="至"
                android:textColor="#242425"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_endclass_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/course"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="50dp"
                    android:text="单周" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="双周" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_update_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:text="更新课程"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_txtsize" />

        <Button
            android:id="@+id/btn_del_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:text="删除课程"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_txtsize" />

        <Button
            android:id="@+id/btn_add_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector"
            android:text="添加课程"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_txtsize" />
    </LinearLayout>

</LinearLayout>